tests/data/parseerror/invalid-class-3.php
<?php

class TokenReflection_Test_ParseInvalidClass13 implements Countable && Traversable
{

}
